/*
 * $Id: ChangeLog,v 1.3472 2004/09/28 09:44:12 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-09-28 08:31 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * include/hbdefs.h
  * include/hbvmpub.h
    - Removed temporary support for HB_FWH_COMPATIBLE
      /* Requested by A.L., This now caused HB_ITEM incompatability with Harbour (and FWH). */

2004-09-28 13:30 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/vm/hash.c
    ! Fixed HHASKEY() to return .T. instead of 1. Fix provided by Valery
      Belorustcev.

2004-09-28 09:00 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/source/rtl/gtwvt/gtwvt.c
    + HB_EXPORT BOOL CALLBACK hb_wvt_gtDlgProcModal( HWND hDlg, UINT message, WPARAM wParam, LPARAM lParam )
  * xHarbour/source/rtl/gtwvt/wvtutils.c
    + WVT_CREATEDIALOGMODAL()
  * xHarbour/source/rtl/gtwvt/wvtpaint.prg
    + Wvt_DialogBox( acnDlg, cbDlgProc, hWndParent )
  * xharbour/include/hbgtwvt.h
    + HWND      hDlgModal[ WVT_DLGMD_MAX ];   // Handle to a modeless dialog
    + PHB_ITEM  pFuncModal[ WVT_DLGMD_MAX ];  // Function pointer for WndProc
    + HB_ITEM   cbFuncModal[ WVT_DLGMD_MAX ]; // codeblock for WndProc
    + int       iTypeModal[ WVT_DLGMD_MAX ];  // Type of Function Pointers - Function 1, Block 2, Method 3
  * xHarbour/tests/wvtgui.prg
    ! Synchronised to use modal dialogs alongwith modeless dialog.

    Now GTWVT is capabble of firing MODAL Dialogs via Wvt_DialogBox() function.
    There is no change in the dialog creation protocol as implemented for
    modeless dialogs. The only limitation is that with Modal dialogs, the three
    options available with modeless dialogs, viz., <ncIcon, nTimerTicks, hMenu>,
    are to be activated in WM_INITDIALOG window message by the programmer himself.